--- a/index.html
+++ b/index.html
@@ -4,176 +4,188 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lab 1</title>
+  <title>lab 1</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <div class="container">
-    <header class="header">
-      <div class="header__title">Landie</div>
-      <div class="header__nav">
-
-        <ul>
-          <li class="header__nav-item"><a href="#">Home</a></li>
-          <li class="header__nav-item"><a href="#">About</a></li>
-          <li class="header__nav-item"><a href="#">Pricing</a></li>
-        </ul>
-      </div>
-
-      <button class="header__buttons button-learn-more"> Learn more</button>
-      <button class="header__buttons button-buy-now">Buy now</button>
-    </header>
-  </div>
-
-  <section class="hero">
-
+  <div class="page">
     <div class="container">
-      <div class="hero__inner">
-        <h1 class="hero__title">Introduce Your Product Quickly & Effectively</h1>
-        <p class="hero__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-          dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-          mus.</p>
-        <p class="hero_text">Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
-          quis enim.</p>
-
-        <div class="hero__articles">
-
-          <div class="hero__article">
-            <img src="../web_lab1_2020/img/Icon.svg" alt="icon img">
-            <h2 class="hero__atricle-title">Title Goes Here</h2>
-            <p class="hero__article-paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-              commodo ligula eget dolor. </p>
-          </div>
-          <div class="hero__article">
-            <img src="../web_lab1_2020/img/Icon.svg" alt="icon img">
-            <h2 class="hero__atricle-title">Title Goes Here</h2>
-            <p class="hero__article-paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-              commodo ligula eget dolor. </p>
-          </div>
+      <header class="header">
+        <div class="header__menu" onclick="toggleMenu()">
+          <img src="img/menu-icon.svg" alt="Menu icon">
         </div>
-      </div>
+
+        <a href="#" class="header__title">Landie</a>
+        <nav id="nav-links" class="header__nav">
+
+          <ul>
+            <li class="header__nav-item"><a href="#">Home</a></li>
+            <li class="header__nav-item"><a href="#">About</a></li>
+            <li class="header__nav-item"><a href="#">Pricing</a></li>
+          </ul>
+
+
+          <button class="header__buttons button-learn-more"> Learn more</button>
+          <button class="header__buttons button-buy-now">Buy now</button>
+        </nav>
+      </header>
     </div>
 
-  </section>
+    <section class="hero">
 
-  <section>
-    <div class="container content__container">
+      <div class="container">
+        <div class="hero__inner">
+          <h1 class="hero__title">Introduce Your Product Quickly & Effectively</h1>
+          <p class="hero__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+            dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+            mus.</p>
+          <p class="hero_text">Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
+            massa
+            quis enim.</p>
 
-      <div class="content">
-        <h1 class="content__header">Light, Fast & Powerful</h1>
-        <p class="content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-          dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-        </p>
-        <p>mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-        </p>
-        <div class="content__articles">
-          <div class="content__article">
-            <img src="../web_lab1_2020/img/Icon.svg" alt="icon img">
-            <h2 class="content__0atricle-title">Title Goes Here</h2>
-            <p class="content__article-paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-              commodo ligula eget dolor. </p>
+          <div class="hero__articles">
+
+            <div class="hero__article">
+              <img src="../web_lab1_2020/img/Icon.svg" alt="icon img">
+              <h2 class="hero__atricle-title">Title Goes Here</h2>
+              <p class="hero__article-paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor. </p>
+            </div>
+            <div class="hero__article">
+              <img src="../web_lab1_2020/img/Icon.svg" alt="icon img">
+              <h2 class="hero__atricle-title">Title Goes Here</h2>
+              <p class="hero__article-paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section>
+      <div class="container content__container">
+
+        <div class="content">
+          <h1 class="content__header">Light, Fast & Powerful</h1>
+          <p class="content__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+            dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+          </p>
+          <p>mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+          </p>
+          <div class="content__articles">
+            <div class="content__article">
+              <img src="../web_lab1_2020/img/Icon.svg" alt="icon img">
+              <h2 class="content__0atricle-title">Title Goes Here</h2>
+              <p class="content__article-paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor. </p>
+            </div>
+
+            <div class="content__article">
+              <img src="../web_lab1_2020/img/Icon.svg" alt="icon img">
+              <h2 class="content__atricle-title">Title Goes Here</h2>
+              <p class="content__article-paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                commodo ligula eget dolor. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container info__container">
+        <div class="info">
+          <h1>A Price To Suit Everyone</h1>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+            Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus </p>
+        </div>
+
+        <div class="price__info__container">
+          <ul>
+            <li class="info__item">
+              <h1 class="info__price">FREE</h1>
+              <h2>UI Kit Demo</h2>
+              <p class="info__paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                eget dolor.
+              </p>
+              <p class="info__paragraph">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
+              <button class="info__button">Purchase Now</button>
+            </li>
+
+            <li class="info__item">
+              <h1 class="info__price">$40</h1>
+              <h2>Design Kit</h2>
+              <p class="info__paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                eget dolor.
+              </p>
+              <p class="info__paragraph">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
+              <button class="info__button">Purchase Design Kit</button>
+            </li>
+
+            <li class="info__item">
+              <h1 class="info__price">$75</h1>
+              <h2>Design & Code Package</h2>
+              <p class="info__paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                eget dolor.
+              </p>
+              <p class="info__paragraph">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
+              <button class="info__button">Purchase Package</button>
+            </li>
+          </ul>
+        </div>
+
+    </section>
+
+
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__copy">&copy; 2020 LPNU</div>
+
+        <a href="#" class="footer__title">Landie</a>
+
+        <div class="footer__line"></div>
+        <div class="footer__vertical">
+          <button class="footer__button">IoT edition</button>
+
+          <div class="footer__link__container">
+            <ul>
+              <li class="footer_link"><a href="#">Home</a></li>
+            </ul>
+            <ul>
+              <li class="footer_link"><a href="#">About</a></li>
+            </ul>
+            <ul>
+              <li class="footer_link"><a href="#">Contact</a></li>
+            </ul>
           </div>
 
-          <div class="content__article">
-            <img src="../web_lab1_2020/img/Icon.svg" alt="icon img">
-            <h2 class="content__atricle-title">Title Goes Here</h2>
-            <p class="content__article-paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-              commodo ligula eget dolor. </p>
+          <div class="footer__logo__container">
+
+            <ul>
+              <li class="footer__social-logo"><img src="img/footer_icons/facebook-icon.svg"
+                  alt="Facebook"></li>
+              <li class="footer__social-logo"><img src="img/footer_icons/linkedin-icon.svg"
+                  alt="Linkedin"></li>
+              <li class="footer__social-logo"><img src="img/footer_icons/twitter-icon.svg"
+                  alt="Twitter">
+              </li>
+              <li class="footer__social-logo"><img src="img/footer_icons/youtube-icon.svg"
+                  alt="YouTube">
+              </li>
+              <li class="footer__social-logo"><img src="img/footer_icons/instagram-icon.svg"
+                  alt="Instagram">
+              </li>
+            </ul>
+
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <section>
-    <div class="container info__container">
-      <div class="info">
-        <h1>A Price To Suit Everyone</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-          Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus </p>
-      </div>
-
-      <div class="price__info__container">
-        <ul>
-          <li class="info__item">
-            <h1 class="info__price">FREE</h1>
-            <h2>UI Kit Demo</h2>
-            <p class="info__paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-              eget dolor.
-            </p>
-            <p class="info__paragraph">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
-            <button class="info__button">Purchase Now</button>
-          </li>
-
-          <li class="info__item">
-            <h1 class="info__price">$40</h1>
-            <h2>Design Kit</h2>
-            <p class="info__paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-              eget dolor.
-            </p>
-            <p class="info__paragraph">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
-            <button class="info__button">Purchase Design Kit</button>
-          </li>
-
-          <li class="info__item">
-            <h1 class="info__price">$75</h1>
-            <h2>Design & Code Package</h2>
-            <p class="info__paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-              eget dolor.
-            </p>
-            <p class="info__paragraph">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
-            <button class="info__button">Purchase Package</button>
-          </li>
-        </ul>
-      </div>
-
-  </section>
-
-
-  <footer class="footer">
-    <div class="container footer__container">
-      <div class="footer__copy">&copy; 2020 LPNU</div>
-
-      <a href="#" class="footer__title">Landie</a>
-
-      <div class="footer__line"></div>
-      <div class="footer__vertical">
-        <button class="footer__button">IoT edition</button>
-
-        <div class="footer__link__container">
-          <ul>
-            <li class="footer_link"><a href="#">Home</a></li>
-          </ul>
-          <ul>
-            <li class="footer_link"><a href="#">About</a></li>
-          </ul>
-          <ul>
-            <li class="footer_link"><a href="#">Contact</a></li>
-          </ul>
-        </div>
-
-        <div class="footer__logo__container">
-
-          <ul>
-            <li class="footer__social-logo"><img src="../web_lab1_2020/img/footer_icons/Instagram Copy 4.svg"
-                alt="Facebook"></li>
-            <li class="footer__social-logo"><img src="../web_lab1_2020/img/footer_icons/Instagram Copy 3.svg"
-                alt="Linkedin"></li>
-            <li class="footer__social-logo"><img src="../web_lab1_2020/img/footer_icons/Instagram Copy 2.svg"
-                alt="Twitter">
-            </li>
-            <li class="footer__social-logo"><img src="../web_lab1_2020/img/footer_icons/Instagram Copy.svg"
-                alt="YouTube">
-            </li>
-            <li class="footer__social-logo"><img src="../web_lab1_2020/img/footer_icons/Instagram.svg" alt="Instagram">
-            </li>
-          </ul>
-
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
